--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,6 @@ div {
 }
 
 /********** Start front **********/
-/* Gradient background */
 .gradient {
   display: block;
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
@@ -163,7 +162,7 @@ div {
 
 nav.navbar {
   position: fixed;
-  z-index: 10;
+  z-index: 1;
   width: 100%;
   height: 62px;
 }
@@ -223,14 +222,9 @@ li.contact.home a:hover {
 /********** End navbar **********/
 
 /********** Start project **********/
-
-/* Remove padding of each img on right and left */
 .col-xs-12 {
   padding: 0px;
 }
-
-/* Change img to wider one at width 1312 (also see media-queries) */
-/* Connect each image with overlap */
 
 .project img {
   display: block;
@@ -296,7 +290,6 @@ h1.project-name {
 p.project-description {
   font-family: "Roboto",sans-serif;
   font-size: 16px;
-  font-weight: 300;
   color: #fff;
 }
 
@@ -310,7 +303,6 @@ p.project-description {
   border: none;
   font-family: "Roboto",sans-serif;
   font-size: 16px;
-  font-weight: 300;
   color: #fff;
   padding: 10px 20px;
   text-align: center;
@@ -319,7 +311,7 @@ p.project-description {
   font-size: 16px;
   margin: 3px 6px;
   cursor: pointer;
-  border: 1px solid #ffffff;
+  border: 2px solid #ffffff;
   border-radius: 25px;
 }
 
