--- a/css/project-media-queries.css
+++ b/css/project-media-queries.css
@@ -8,6 +8,6 @@
     display: flexbox;
   }
   .main-text {
-    font-size: 60px;
+    font-size: 40px;
   }
 }
