--- a/css/pure-drawer-override.css
+++ b/css/pure-drawer-override.css
@@ -21,15 +21,15 @@
 .pure-toggle-label:hover .pure-toggle-icon,
 .pure-toggle-label:hover .pure-toggle-icon:before,
 .pure-toggle-label:hover .pure-toggle-icon:after {
-  background-color: #d8f8fd;
-  border-color: #d8f8fd;
-  color: #d8f8fd;
+  background-color: #c0c0c0;
+  border-color: #c0c0c0;
+  color: #c0c0c0;
 }
 
 /* style and position of the hamburger circle */
 .pure-toggle-label {
-  border: 2px #d8f8fd;
-  color: #d8f8fd;
+  border: 2px #c0c0c0;
+  color: #c0c0c0;
   top: -4px;
 }
 
@@ -48,7 +48,7 @@ a {
 
 /* colour of menu contents when hovering */
 p.mobile-menu-items a:hover {
-  color: #d8f8fd;
+  color: #c0c0c0;
   text-decoration: none;
 }
 
@@ -58,7 +58,7 @@ p.mobile-menu-items a:hover {
 
 /* color of drawer */
 .pure-drawer {
-  background-color: rgba(30, 37, 40, 0.97);
+  background-color: #2b2b2bec;
   position: fixed;
 }
 
@@ -68,7 +68,7 @@ p.mobile-menu-items {
   font-family: "Poppins", sans-serif;
   font-size: 30px;
   font-weight: 400;
-  letter-spacing: -0.02em;
+  letter-spacing: 1px;
   line-height: 77px;
 }
 /* Speed to open and close drawer */
